# nldate

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
src/nldate/: _parse.py
tests/: parse_tests.py  test_parse.py
